--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -16,3 +16,14 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.triangle {
+  width: 0px;
+  height: 0px;
+  border-left: 15px transparent;
+  border-right: 15px transparent;
+  border-bottom: 26px solid black;
+  /* border-left: transparent;
+  border-right: transparent; */
+  /* border-bottom: ; */
+}
